--- a/HamsterWars/Shared/NavMenu.razor
+++ b/HamsterWars/Shared/NavMenu.razor
@@ -19,7 +19,11 @@
                 <span class="oi oi-plus" aria-hidden="true"></span> Counter
             </NavLink>
         </div>
-        
+          <div class="nav-item px-3">
+            <NavLink class="nav-link" href="/hamsters/Hamster">
+                <span class="oi oi-plus" aria-hidden="true"></span> hamsters
+            </NavLink>
+        </div>
     </nav>
 </div>
 
