--- a/HamsterWars/Shared/NavMenu.razor
+++ b/HamsterWars/Shared/NavMenu.razor
@@ -19,9 +19,19 @@
                 <span class="oi oi-plus" aria-hidden="true"></span> Counter
             </NavLink>
         </div>
-          <div class="nav-item px-3">
-            <NavLink class="nav-link" href="/hamsters/Hamster">
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="/mypages/Hamster">
                 <span class="oi oi-plus" aria-hidden="true"></span> hamsters
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="/mypages/Competition">
+                <span class="oi oi-plus" aria-hidden="true"></span> WAR!!
+            </NavLink>
+        </div> 
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="/test">
+                <span class="oi oi-plus" aria-hidden="true"></span> testing site
             </NavLink>
         </div>
     </nav>
