--- a/HamsterWars/Pages/mypages/Testing.razor
+++ b/HamsterWars/Pages/mypages/Testing.razor
@@ -13,14 +13,17 @@
 else
 {
     <div class="row row-no-margin center">
-        @foreach (var hamster in RandomHamster())
+        @{
+            var temp = RandomHamster();
+        }
+        @foreach (var hamster in temp)
         {
             <div class="col-xs-12 col-sm-6 col-no-padding center">
                 <h1 class="text-center">@hamster.Name</h1>
                 <div class="col-xs-12 col-sm-6 col-no-padding ">
                     <a href="#"><img class="thumbnail img-responsive " src="/Content/Photos/@hamster.ImgName"></a>
                     <h4>Wins = @hamster.Wins</h4>
-                    <button type="button" @onclick="(() => InsertLike(hamster))" class="btn btn-info">Like</button>
+                    <button type="button" @onclick="(() => InsertLike(temp,hamster.Name))" class="btn btn-info">Like</button>
                 </div>
             </div>
         }
@@ -31,6 +34,7 @@ else
 @code
 {
     private List<Hamsters> hamstersList = new List<Hamsters>();
+    public Hamsters Hamsters { get; set; }     
     protected override async Task OnInitializedAsync()
     {
         hamstersList = await _db.GetHamsters();
@@ -54,11 +58,22 @@ else
         }
         return templist;
     }
-    private async Task InsertLike(Hamsters hamster)
+    private async Task InsertLike(List<Hamsters> cometitorlist, string name)
     {
-        hamster.Wins++;
-        hamster.Games++;
-        await _db.InsertLikes(hamster);
+        foreach(var i in cometitorlist)
+        {
+            if  (i.Name == name)
+            {
+                i.Wins++;
+                i.Games++;
+            }
+            else
+            {
+                i.Games++;
+                i.Defeats++;
+            }
+        }
+        await _db.InsertLikes(Hamsters);
     }
 
 }
