--- a/HamsterWars/Pages/Index.razor
+++ b/HamsterWars/Pages/Index.razor
@@ -1,6 +1,20 @@
 ﻿@page "/"
+@using DataAccessLibrary
+@inject IHamsterData _db
+
 
 <PageTitle>Index</PageTitle>
 
-<h1>Hamster Wars</h1>
+<h1>Welcome to HamsterWars</h1>
 
+
+
+
+
+@code{
+    private List<Hamsters> hamstersList = new List<Hamsters>();
+    protected override async Task OnInitializedAsync()
+    {
+        hamstersList = await _db.GetHamsters();
+    }
+}
