--- a/HamsterWars/Pages/mypages/Competition.razor
+++ b/HamsterWars/Pages/mypages/Competition.razor
@@ -19,7 +19,7 @@ else
 
 
 @code {
-    private List<Hamsters> hamsterList = new List<Hamsters>();
+    private List<HamsterModel> hamsterList = new List<HamsterModel>();
     protected override async Task OnInitializedAsync()
     {
         hamsterList = await _db.GetHamsters();
