--- a/HamsterWars/Pages/mypages/Testing.razor
+++ b/HamsterWars/Pages/mypages/Testing.razor
@@ -21,7 +21,7 @@ else
             <div class="col-xs-12 col-sm-6 col-no-padding center">
                 <h1 class="text-center">@hamster.Name</h1>
                 <div class="col-xs-12 col-sm-6 col-no-padding ">
-                    <a href="#"><img class="thumbnail img-responsive " src="/Content/Photos/@hamster.ImgName"></a>
+                    <img class="thumbnail img-responsive " src="/Content/Photos/@hamster.ImgName">
                     <h4>Wins = @hamster.Wins</h4>
                     <button type="button" @onclick="(() => InsertLike(temp,hamster.Name,hamster))" class="btn btn-info">Like</button>
                 </div>
@@ -34,20 +34,20 @@ else
 
 @code
 {
-    private List<Hamsters> hamstersList = new List<Hamsters>();
+    private List<HamsterModel> hamstersList = new List<HamsterModel>();
     protected override async Task OnInitializedAsync()
     {
         hamstersList = await _db.GetHamsters();
     }
 
-    private List<Hamsters> RandomHamster() // se till så att samma bild inte kan komma 2 gånger in i listan
+    private List<HamsterModel> RandomHamster() // se till så att samma bild inte kan komma 2 gånger in i listan
     {
-        List<Hamsters> templist = new List<Hamsters>();
+        List<HamsterModel> templist = new List<HamsterModel>();
         for (int i = 0; i < 3; i++)
         {
             Random rnd = new Random();
             int rndId = rnd.Next(1, 40);
-            foreach (Hamsters h in hamstersList)
+            foreach (HamsterModel h in hamstersList)
             {
                 if (h.Id == rndId)
                 {
@@ -58,7 +58,7 @@ else
         }
         return templist;
     }
-    private async Task InsertLike(List<Hamsters> cometitorlist, string name, Hamsters hamsters) // fixa namn på listan
+    private async Task InsertLike(List<HamsterModel> cometitorlist, string name, HamsterModel hamsters) // fixa namn på listan
     {
         foreach (var i in cometitorlist)
         {
@@ -66,6 +66,7 @@ else
             {
                 i.Wins++;
                 i.Games++;
+                i.WinRate = Services.PercentCalculator.ProcentCalculator(i.Games, i.Wins);
                 await _db.InsertLikes(i);
             }
             else
