--- a/HamsterWars/Pages/mypages/Competition.razor
+++ b/HamsterWars/Pages/mypages/Competition.razor
@@ -5,8 +5,8 @@
 
 
 
-<h1>TIME FOR WAR</h1>
-<h3 class="text-center">Choose the best looking Hamster</h3>
+<h1 class="text-center">TIME FOR WAR</h1>
+
 @if (hamsterList == null)
 {
     <p><em>Loading....</em></p>
@@ -26,6 +26,5 @@ else
     }
 
     }
-}
 
-                   
+
