--- a/HamsterWars/wwwroot/css/site.css
+++ b/HamsterWars/wwwroot/css/site.css
@@ -3,6 +3,27 @@
 html, body {
     font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
+/*custom*/
+body {
+    background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+    background-size: 400% 400%;
+    animation: gradient 15s ease infinite;
+    height: 100vh;
+}
+/*custom*/
+@keyframes gradient {
+    0% {
+        background-position: 0% 50%;
+    }
+
+    50% {
+        background-position: 100% 50%;
+    }
+
+    100% {
+        background-position: 0% 50%;
+    }
+}
 
 h1:focus {
     outline: none;
@@ -62,11 +83,9 @@ a, .btn-link {
     .blazor-error-boundary::after {
         content: "An error has occurred."
     }
-    /*vill få bilden i mitten*/
+/*vill få bilden i mitten*/
 .center {
     display: block;
     margin-left: auto;
     margin-right: auto;
-    
-    
 }
