--- a/HamsterWars/Shared/NavMenu.razor
+++ b/HamsterWars/Shared/NavMenu.razor
@@ -15,25 +15,25 @@
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
-                <span class="oi oi-plus" aria-hidden="true"></span> Counter
-            </NavLink>
-        </div>
-        <div class="nav-item px-3">
             <NavLink class="nav-link" href="/mypages/Hamster">
-                <span class="oi oi-plus" aria-hidden="true"></span> hamsters
+                <span class="oi oi-box" aria-hidden="true"></span> hamsters
             </NavLink>
         </div>
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="/mypages/Competition">
-                <span class="oi oi-plus" aria-hidden="true"></span> WAR!!
-            </NavLink>
-        </div> 
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="/test">
-                <span class="oi oi-plus" aria-hidden="true"></span> testing site
+                <span class="oi oi-thumb-down" aria-hidden="true"></span> WAR!!
             </NavLink>
         </div>
+         <div class="nav-item px-3">
+            <NavLink class="nav-link" href="/mypages/Statistics">
+                <span class="oi oi-bar-chart" aria-hidden="true"></span> Statistics
+            </NavLink>
+        </div> <div class="nav-item px-3">
+            <NavLink class="nav-link" href="/mypages/Leaderboard">
+                <span class="oi oi-bar-chart" aria-hidden="true"></span> Leaderboard
+            </NavLink>
+        </div>
+
     </nav>
 </div>
 
