--- a/HamsterWars/Pages/mypages/Hamster.razor
+++ b/HamsterWars/Pages/mypages/Hamster.razor
@@ -1,14 +1,7 @@
 ﻿@page "/mypages/Hamster"
-
 @using DataAccessLibrary
-
-
 @inject IHamsterData _db
 
-
-
-
-<h3>Hamster Page</h3>
 
 <h4>Our Hamsters</h4>
 @if (hamsters is null)
@@ -17,49 +10,47 @@
 }
 else
 {
-    <table class="table table-striped">
-        <thead>
-            <tr>
-                <th>Name</th>
-                <th>Age</th>
-                <th>Favorite Food</th>
-                <th>Loves</th>
-                <th></th> @* Visa bilden här*@
-                <th>Wins</th>
-                <th>Defeats</th>
-                <th>Games played</th>
-            </tr>
-        </thead>
-        <tbody>
-            @foreach (var hamster in hamsters)
-            {
+    <div>
+        <table class="table">
+            <thead>
                 <tr>
-                    <td>@hamster.Name</td>
-                    <td>@hamster.Age</td>
-                    <td>@hamster.FavFood</td>
-                    <td>@hamster.Loves</td>
-                    <td>
-                        <a href="~/Content/Photos/@hamster.ImgName">Picture</a>
-                    </td> 
-                    <td>@hamster.Wins</td>
-                    <td>@hamster.Defeats</td>
-                    <td>@hamster.Games</td>
+                    <th scope="col">Name</th>
+                    <th scope="col">Age</th>
+                    <th scope="col">Favorite Food</th>
+                    <th scope="col">Loves</th>
+                    <th scope="col">Wins</th>
+                    <th scope="col">Defeats</th>
+                    <th scope="col">Games played</th>
                 </tr>
-            }
-        </tbody>
-    </table>
-}
+            </thead>
+            <tbody>
+                @foreach (var hamster in hamsters)
+                {
+                    <tr>
+                        <td>@hamster.Name</td>
+                        <td>@hamster.Age</td>
+                        <td>@hamster.FavFood</td>
+                        <td>@hamster.Loves</td>
+                        <td>@hamster.Wins</td>
+                        <td>@hamster.Defeats</td>
+                        <td>@hamster.Games</td>
+                    </tr>
+                }
+            </tbody>
+        </table>
+        </div>
+        }
 
 
 
 
 
 
-@code {
-    private List<HamsterModel> hamsters = new List<HamsterModel>();
-    protected override async Task OnInitializedAsync()
-    {
-        hamsters = await _db.GetHamsters();
+        @code {
+        private List<HamsterModel> hamsters = new List<HamsterModel>();
+        protected override async Task OnInitializedAsync()
+        {
+            hamsters = await _db.GetHamsters();
+        }
     }
-}
 
