--- a/HamsterWars/Shared/NavMenu.razor
+++ b/HamsterWars/Shared/NavMenu.razor
@@ -20,7 +20,7 @@
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="/mypages/Competition">
+            <NavLink class="nav-link" href="/test">
                 <span class="oi oi-thumb-down" aria-hidden="true"></span> WAR!!
             </NavLink>
         </div>
