--- a/HamsterWars/Shared/NavMenu.razor
+++ b/HamsterWars/Shared/NavMenu.razor
@@ -15,12 +15,12 @@
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="/mypages/Hamster">
+            <NavLink class="nav-link" href="/gallery">
                 <span class="oi oi-box" aria-hidden="true"></span> hamsters
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="/test">
+            <NavLink class="nav-link" href="/battle">
                 <span class="oi oi-thumb-down" aria-hidden="true"></span> WAR!!
             </NavLink>
         </div>
