--- a/HamsterWars/Pages/Index.razor
+++ b/HamsterWars/Pages/Index.razor
@@ -7,6 +7,8 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
 
 <PageTitle>Index</PageTitle>
+
+
 @if (hamsters is null)
 {
     <p><em>Loading...</em></p>
@@ -14,7 +16,7 @@
 else
 {
     <h1>Welcome to Hamster Wars!</h1>
-    <div>@*give class and name*@
+    <div>
         <div>
             <p1>
                 When you visit the battle site you are meet with two picture's
