--- a/HamsterWars/wwwroot/css/site.css
+++ b/HamsterWars/wwwroot/css/site.css
@@ -8,7 +8,7 @@ body {
     background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
     background-size: 400% 400%;
     animation: gradient 15s ease infinite;
-    height: 100vh;
+    min-height: 100vh;
 }
 /*custom*/
 @keyframes gradient {
@@ -95,8 +95,8 @@ p1,p{
 .flip-card {
     background-color: transparent;
     width: 300px;
-    height: 200px;
-    border: 1px solid #f1f1f1;
+    height: 300px;
+    border: 0px solid #f1f1f1;
     perspective: 1000px;
 }
 .flip-card-inner {
