--- a/HamsterWars/wwwroot/css/site.css
+++ b/HamsterWars/wwwroot/css/site.css
@@ -133,3 +133,13 @@ p1,p{
     color: white;
     transform: rotateY(180deg);
 }
+.column {
+    float: left;
+    width: 33.33%;
+    padding: 5px;
+}
+.row::after {
+    content: "";
+    clear: both;
+    display: table;
+}
