--- a/HamsterWars/Pages/Component/Gallery.razor
+++ b/HamsterWars/Pages/Component/Gallery.razor
@@ -13,25 +13,31 @@
 }
 else
 {
-    <div class="jasd"></div>
-    <button  @onclick="@(()=>_nav.NavigateTo("/addHamster"))" type="button" class="btn btn-primary">Add Hamster</button>
-    @foreach (var hamster in hamsters)
-    {
-        <div class="flip-card">
-            <div class="flip-card-inner">
-                <div class="flip-card-front">
-                    <img src="/Content/Photos/@hamster.ImgName" onerror="this.onerror=null; this.src='/Content/Photos/hamster.jpg.jpg'" alt="" style="width:300px;height:300px;">
-                </div>
-                <div class="flip-card-back">
-                    <h1>@hamster.Name</h1>
-                    <p>Age:@hamster.Age</p>
-                    <p>Favorite Food:@hamster.FavFood</p>
-                    <p>Favorite Activity:@hamster.Loves</p>
-                    <button type="button" @onclick="(() => RemoveHamster(hamster))" class="btn btn-danger">REMOVE</button>
+    <button @onclick="@(()=>_nav.NavigateTo("/addHamster"))" type="button" class="btn btn-primary">Add Hamster</button>
+
+    <div class="row">
+        @foreach (var hamster in hamsters)
+        {
+            <div class="column">
+                <div class="jasd">
+                    <div class="flip-card">
+                        <div class="flip-card-inner">
+                            <div class="flip-card-front">
+                                <img src="/Content/Photos/@hamster.ImgName" onerror="this.onerror=null; this.src='/Content/Photos/hamster.jpg.jpg'" alt="" style="width:300px;height:300px;">
+                            </div>
+                            <div class="flip-card-back">
+                                <h1>@hamster.Name</h1>
+                                <p>Age:@hamster.Age</p>
+                                <p>Favorite Food:@hamster.FavFood</p>
+                                <p>Favorite Activity:@hamster.Loves</p>
+                                <button type="button" @onclick="(() => RemoveHamster(hamster))" class="btn btn-danger">REMOVE</button>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
-        </div>
-    }
+        }
+    </div>
 }
 
 @code {
@@ -40,7 +46,7 @@ else
     {
         hamsters = await _db.GetHamsters();
     }
-   
+
     private async Task RemoveHamster(HamsterModel hamster)
     {
         await _db.RemoveHamster(hamster);
